exports[`use various parts of svg-edit > check tool_source #0`] = `
<svg width="640" height="480" xmlns="http://www.w3.org/2000/svg" xmlns:svg="http://www.w3.org/2000/svg">
 <g class="layer">
  <title>Layer 1</title>
  <rect fill="#FF0000" height="70" id="rect" stroke="#000000" stroke-width="5" width="94" x="69.5" y="51.5"/>
 </g>
</svg>
`;

exports[`use various parts of svg-edit > check tool_text #0`] = `
<svg width="640" height="480" xmlns="http://www.w3.org/2000/svg" xmlns:svg="http://www.w3.org/2000/svg">
 <g class="layer">
  <title>Layer 1</title>
  <rect fill="#FF0000" height="70" id="rect" stroke="#000000" stroke-width="5" width="94" x="69.5" y="51.5"/>
  <text fill="#000000" font-family="serif" font-size="24" id="svg_1" stroke="#000000" stroke-width="0" text-anchor="middle" x="116" xml:space="preserve" y="87">B</text>
 </g>
</svg>
`;

exports[`use various parts of svg-edit > check tool_clone #0`] = `
<svg width="640" height="480" xmlns="http://www.w3.org/2000/svg" xmlns:svg="http://www.w3.org/2000/svg">
 <g class="layer">
  <title>Layer 1</title>
  <rect fill="#FF0000" height="70" id="rect" stroke="#000000" stroke-width="5" width="94" x="69.5" y="51.5"/>
  <text fill="#000000" font-family="serif" font-size="24" id="svg_1" stroke="#000000" stroke-width="0" text-anchor="middle" x="116" xml:space="preserve" y="87">B</text>
  <text fill="#000000" font-family="serif" font-size="24" id="svg_2" stroke="#000000" stroke-width="0" text-anchor="middle" x="136" xml:space="preserve" y="107">B</text>
 </g>
</svg>
`;

exports[`use various parts of svg-edit > check tool_italic #0`] = `
<svg width="640" height="480" xmlns="http://www.w3.org/2000/svg" xmlns:svg="http://www.w3.org/2000/svg">
 <g class="layer">
  <title>Layer 1</title>
  <rect fill="#FF0000" height="70" id="rect" stroke="#000000" stroke-width="5" width="94" x="69.5" y="51.5"/>
  <text fill="#000000" font-family="serif" font-size="24" font-style="italic" id="svg_1" stroke="#000000" stroke-width="0" text-anchor="middle" x="116" xml:space="preserve" y="87">B</text>
  <text fill="#000000" font-family="serif" font-size="24" id="svg_2" stroke="#000000" stroke-width="0" text-anchor="middle" x="136" xml:space="preserve" y="107">B</text>
 </g>
</svg>
`;

exports[`use various parts of svg-edit > check tool_bold #0`] = `
<svg width="640" height="480" xmlns="http://www.w3.org/2000/svg" xmlns:svg="http://www.w3.org/2000/svg">
 <g class="layer">
  <title>Layer 1</title>
  <rect fill="#FF0000" height="70" id="rect" stroke="#000000" stroke-width="5" width="94" x="69.5" y="51.5"/>
  <text fill="#000000" font-family="serif" font-size="24" font-style="italic" font-weight="bold" id="svg_1" stroke="#000000" stroke-width="0" text-anchor="middle" x="116" xml:space="preserve" y="87">B</text>
  <text fill="#000000" font-family="serif" font-size="24" id="svg_2" stroke="#000000" stroke-width="0" text-anchor="middle" x="136" xml:space="preserve" y="107">B</text>
 </g>
</svg>
`;
